--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -11,4 +11,13 @@
         <servlet-name>ProductListServlet</servlet-name>
         <url-pattern>/listProduct</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>UserLoginServlet</servlet-name>
+        <servlet-class>servlet.UserLoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UserLoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
 </web-app>
