--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,6 +4,14 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <servlet>
+        <servlet-name>UserLoginServlet</servlet-name>
+        <servlet-class>servlet.UserLoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UserLoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet>
         <servlet-name>ProductListServlet</servlet-name>
         <servlet-class>servlet.ProductListServlet</servlet-class>
     </servlet>
@@ -12,12 +20,23 @@
         <url-pattern>/listProduct</url-pattern>
     </servlet-mapping>
 
+
+    
     <servlet>
-        <servlet-name>UserLoginServlet</servlet-name>
-        <servlet-class>servlet.UserLoginServlet</servlet-class>
+        <servlet-name>OrderItemAddServlet</servlet-name>
+        <servlet-class>servlet.OrderItemAddServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>UserLoginServlet</servlet-name>
-        <url-pattern>/login</url-pattern>
+        <servlet-name>OrderItemAddServlet</servlet-name>
+        <url-pattern>/addOrderItem</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>OrderItemListServlet</servlet-name>
+        <servlet-class>servlet.OrderItemListServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>OrderItemListServlet</servlet-name>
+        <url-pattern>/listOrderItem</url-pattern>
     </servlet-mapping>
 </web-app>
